# mediaPlayerBase

./: CMakeLists.txt  README.md  main.cpp
inc/: type.h
inc/SDL2/: SDL_config.h
inc/Utils/: IUtilsNetSession.h  tcpUtilsNetSession.h  udpUtilsNetSession.h
inc/media/: FFMPEGPlayer.h  IPlayer.h  IPlayerNotify.h  IPortingPlayer.h
inc/surface/: ISurface.h  SDL2Surface.h
lib/: libavdevice.so.57  libavfilter.so.6.47.100  libavutil.so.55.28.100  libswresample.so.2  libswscale.so.4.1.100
src/platform/: FFMPEGPlayer.cpp  SDL2Surface.cpp
src/utils/: udpUtilsNetSession.cpp
